force-app/main/default/objects/crms14__reg_direct_Settings__c/crms14__reg_direct_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>reg,direct Settings</label>
</CustomObject>