force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Account_Update_Delay__c.field-meta.xml
<CustomField>
    <fullName>crms14__Account_Update_Delay__c</fullName>
    <defaultValue>1440</defaultValue>
    <label>Account Update Delay</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>