force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__ClearExpiryDate_CompaniesLinkedToOther__c.field-meta.xml
<CustomField>
    <fullName>crms14__ClearExpiryDate_CompaniesLinkedToOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClearExpiryDate_CompaniesLinkedToOther</label>
    <type>Checkbox</type>
</CustomField>