force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Companies_House_Api_End_Point__c.field-meta.xml
<CustomField>
    <fullName>crms14__Companies_House_Api_End_Point__c</fullName>
    <label>Companies House Api End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>