force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Companies_House_API_Key__c.field-meta.xml
<CustomField>
    <fullName>crms14__Companies_House_API_Key__c</fullName>
    <label>Companies House API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>