force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Company_Creation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company_Creation_Frequency__c</fullName>
    <label>Company Creation Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>