force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Company_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company_Sync_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>