force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Create_Contact__c.field-meta.xml
<CustomField>
    <fullName>crms14__Create_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Contact</label>
    <type>Checkbox</type>
</CustomField>