force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Debug__c.field-meta.xml
<CustomField>
    <fullName>crms14__Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>