force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Default_Account_Sync__c.field-meta.xml
<CustomField>
    <fullName>crms14__Default_Account_Sync__c</fullName>
    <label>Default Account Sync</label>
    <length>80</length>
    <type>Text</type>
</CustomField>