force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Enable_Deletion_of_Company_Records__c.field-meta.xml
<CustomField>
    <fullName>crms14__Enable_Deletion_of_Company_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Deletion of Company Records</label>
    <type>Checkbox</type>
</CustomField>