force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Enable_New_Company_Creation__c.field-meta.xml
<CustomField>
    <fullName>crms14__Enable_New_Company_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable New Company Creation</label>
    <type>Checkbox</type>
</CustomField>