force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Enable_Prior_Name_Create_Update__c.field-meta.xml
<CustomField>
    <fullName>crms14__Enable_Prior_Name_Create_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Prior Name Create/Update</label>
    <type>Checkbox</type>
</CustomField>