force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Enable_Sync__c.field-meta.xml
<CustomField>
    <fullName>crms14__Enable_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sync</label>
    <type>Checkbox</type>
</CustomField>