force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>crms14__Expiry_Days__c</fullName>
    <label>Expiry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>