force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Id_Verification_Background_Job__c.field-meta.xml
<CustomField>
    <fullName>crms14__Id_Verification_Background_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the Idv Refresh job is enabled</description>
    <label>Id Verification Background Job</label>
    <type>Checkbox</type>
</CustomField>