force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Id_Verification_Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>crms14__Id_Verification_Schedule_Frequency__c</fullName>
    <label>Id Verification Schedule Frequency</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>