force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Max_Sync_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>crms14__Max_Sync_Per_Day__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Max Sync Per Day</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>