force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Min_Delay_Between_Sync__c.field-meta.xml
<CustomField>
    <fullName>crms14__Min_Delay_Between_Sync__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Min Delay Between Sync</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>