force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Set_Company_Name_on_Search__c.field-meta.xml
<CustomField>
    <fullName>crms14__Set_Company_Name_on_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Company Name on Search</label>
    <type>Checkbox</type>
</CustomField>