force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__SIC_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>crms14__SIC_Delimiter__c</fullName>
    <defaultValue>&apos;,&apos;</defaultValue>
    <label>SIC Delimiter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>