force-app/main/default/objects/crms14__reg_direct_Settings__c/fields/crms14__Use_Limited_Feature_Key__c.field-meta.xml
<CustomField>
    <fullName>crms14__Use_Limited_Feature_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Limited Feature Key</label>
    <type>Checkbox</type>
</CustomField>